--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "vue": "^2.3.3",
-    "vue-router": "^2.7.0"
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
